--- a/css/main.css
+++ b/css/main.css
@@ -1,281 +1,1 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: warnock-pro, "Sabon LT Std", Georgia, "Times New Roman", Times, serif; }
-
-header, footer {
-  background-color: #000000; }
-
-h1 {
-  font-family: league-gothic, "Gill Sans", "Helvetica", "Arial", sans-serif;
-  font-weight: 400;
-  font-size: 2.5em;
-  margin: 0; }
-  .wf-active h1 {
-    font-size: 3.5em; }
-  #blogpost h1 {
-    font-size: 1.5em; }
-  html.wf-active body#blogpost h1 {
-    font-size: 2.6em; }
-
-h2 {
-  font-family: league-gothic, "Gill Sans", "Helvetica", "Arial", sans-serif;
-  font-weight: 400;
-  font-variant: small-caps;
-  margin: 0;
-  font-size: 1.2em; }
-  .wf-active h2 {
-    font-size: 1.7em; }
-  body#blogpost h2 {
-    font-size: .8em; }
-  html.wf-active body#blogpost h2 {
-    font-size: 1.2em; }
-
-h3 {
-  font-family: league-gothic, "Gill Sans", "Helvetica", "Arial", sans-serif;
-  font-weight: 400;
-  margin: 0; }
-
-.wf-active h3 {
-  font-size: 1.3em; }
-
-a {
-  -moz-transition: color 0.5s ease-in;
-  -o-transition: color 0.5s ease-in;
-  -ms-transition: color 0.5s ease-in;
-  -webkit-transition: color 0.5s ease-in;
-  transition: color 0.5s ease-in; }
-  a:link {
-    color: #FF0000;
-    text-decoration: none; }
-  a:visited {
-    color: #FF0000;
-    text-decoration: none; }
-  a:hover {
-    color: #555555;
-    text-decoration: underline; }
-  a:active {
-    color: #FF0000;
-    text-decoration: underline; }
-  a img {
-    border: 1px solid #ff0000; }
-
-header h1 {
-  margin-top: 0; }
-header hgroup h2 {
-  color: #FFFFFF;
-  font-variant: normal; }
-  header hgroup h2.homenav {
-    display: inline;
-    padding-right: 20px; }
-header p {
-  color: #FFFFFF;
-  font-family: league-gothic, "Gill Sans", "Helvetica", "Arial", sans-serif;
-  font-weight: 400;
-  margin-top: 0; }
-header nav {
-  font-family: league-gothic, "Gill Sans", "Helvetica", "Arial", sans-serif; }
-  .wf-active header nav {
-    font-size: 120%; }
-  header nav ul {
-    margin-top: 0;
-    font-weight: 400;
-    padding-left: 0;
-    margin-left: 0;
-    padding-top: 10px;
-    list-style: none;
-    height: 15px; }
-    header nav ul li {
-      display: block;
-      float: left;
-      padding-right: 20px; }
-header a:link {
-  color: #FF0000;
-  text-decoration: none; }
-header a:visited {
-  color: #FF0000;
-  text-decoration: none; }
-header a:hover {
-  color: #CCCCCC;
-  text-decoration: underline; }
-header a:active {
-  color: #CCCCCC;
-  text-decoration: underline; }
-header img {
-  display: none;
-  position: absolute;
-  top: 5px;
-  right: 5px; }
-
-body.home header img {
-  position: relative; }
-
-#archives ul {
-  list-style: none;
-  padding-left: 0; }
-
-#categories a img {
-  border: none; }
-
-footer {
-  font-family: league-gothic, "Gill Sans", "Helvetica", "Arial", sans-serif;
-  font-weight: 400; }
-  footer nav ul {
-    list-style: none;
-    padding: 10px 0 20px 0;
-    margin: 0;
-    float: left; }
-  footer nav li {
-    float: left;
-    padding-right: 20px; }
-  footer p {
-    color: #FFFFFF;
-    clear: both; }
-
-.wf-active footer {
-  font-size: 120%; }
-
-blockquote {
-  font-style: italic;
-  background-color: #ccc;
-  padding: 5px;
-  border: 1px solid #FF0000;
-  margin: 0 15px 10px 15px;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  border-radius: 5px;
-  -moz-background-clip: padding;
-  -webkit-background-clip: padding-box;
-  background-clip: padding-box; }
-
-#content {
-  background-color: #FFFFFF; }
-  #content h2 a:link {
-    color: #000000; }
-  #content h2 a:visited {
-    color: #000000; }
-  #content h2 a:hover {
-    color: #FF0000;
-    text-decoration: underline; }
-  #content h2 a:active {
-    color: #000000;
-    text-decoration: underline; }
-  #content p {
-    margin: 0;
-    padding-bottom: 15px; }
-
-#disclaimer {
-  padding-top: 20px;
-  font-family: warnock-pro, "Sabon LT Std", Georgia, "Times New Roman", Times, serif;
-  font-style: italic; }
-
-div#content > div {
-  padding-bottom: 20px; }
-
-header, footer, #content, #archives {
-  padding: 0 10px 3px 10px; }
-
-article {
-  padding: 0 0px; }
-  article ul {
-    margin: 0 0 10px 0; }
-  article header {
-    background-color: #FFFFFF;
-    padding: 0;
-    color: #000000; }
-  article footer {
-    background-color: #FFFFFF;
-    padding: 0;
-    color: #000000; }
-  article footer p {
-    color: #000000; }
-  article header h1 {
-    font-size: 2.5em;
-    padding: 0; }
-  article aside {
-    font-style: italic;
-    border: 1px dotted #ff0000;
-    background-color: #F0f0f0;
-    padding: 5px;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    border-radius: 5px;
-    -moz-background-clip: padding;
-    -webkit-background-clip: padding-box;
-    background-clip: padding-box;
-    margin: 0 0 10px 0; }
-  article footer {
-    color: #000000;
-    font-family: warnock-pro, "Sabon LT Std", Georgia, "Times New Roman", Times, serif; }
-  article .related ul {
-    padding: 0 0 15px 0;
-    margin: 0 0 0 20px; }
-  article img {
-    max-width: 100%; }
-
-#comment_list {
-  overflow: hidden;
-  padding-left: 0; }
-  #comment_list .comment_num {
-    font-size: 78px;
-    float: left;
-    margin: 0 5px 5px 0px;
-    padding-top: 5px;
-    line-height: .7;
-    text-decoration: none; }
-    #comment_list .comment_num a {
-      color: #000000; }
-    #comment_list .comment_num a:link {
-      color: #000000; }
-    #comment_list .comment_num a:visited {
-      color: #000000; }
-    #comment_list .comment_num a:hover {
-      color: #000000; }
-    #comment_list .comment_num a:active {
-      color: #000000; }
-
-#comment_list div.author .comment_num, #comment_list li.author .comment_num a {
-  color: #CCC; }
-
-li.comment {
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  border-radius: 5px;
-  -moz-background-clip: padding;
-  -webkit-background-clip: padding-box;
-  background-clip: padding-box;
-  margin-bottom: 10px;
-  padding: 5px 5px 5px 5px;
-  float: left;
-  border: 1px solid #CCC;
-  width: 95%;
-  background-color: #F0f0f0;
-  list-style: none; }
-  li.comment p {
-    padding: 0;
-    margin: 0; }
-
-li.author {
-  border: 1px solid #076FA2;
-  background-color: #FF0000; }
-  li.author a {
-    color: #FFFFFF; }
-
-.item {
-  padding-bottom: 10px; }
-
-.pod {
-  padding: 10px 0 20px 0; }
-
-.externalref {
-  text-align: right;
-  font-style: italic; }
-
-.about img {
-  border: 1px solid #FF0000; }
-
-#action ul {
-  padding-left: 25px; }
-
-#action a img {
-  border: none; }
+body{margin:0;padding:0;font-family:warnock-pro,"Sabon LT Std",Georgia,"Times New Roman",Times,serif}header,footer{background-color:#000000}h1{font-family:league-gothic,"Gill Sans","Helvetica","Arial",sans-serif;font-weight:400;font-size:2.2em;margin:0}.wf-active h1{font-size:3.2em}#blogpost h1{font-size:1.5em}html.wf-active body#blogpost h1{font-size:2.6em}h2{font-family:league-gothic,"Gill Sans","Helvetica","Arial",sans-serif;font-weight:400;font-variant:small-caps;margin:0;font-size:1em}.wf-active h2{font-size:1.4em}body#blogpost h2{font-size:.8em}html.wf-active body#blogpost h2{font-size:1em}h3{font-family:league-gothic,"Gill Sans","Helvetica","Arial",sans-serif;font-weight:400;margin:0}.wf-active h3{font-size:1.3em}a{-moz-transition:color 0.5s ease-in;-o-transition:color 0.5s ease-in;-ms-transition:color 0.5s ease-in;-webkit-transition:color 0.5s ease-in;transition:color 0.5s ease-in}a:link{color:#FF0000;text-decoration:none}a:visited{color:#FF0000;text-decoration:none}a:hover{color:#555555;text-decoration:underline}a:active{color:#FF0000;text-decoration:underline}a img{border:1px solid #ff0000}header h1{margin-top:0}header hgroup h2{color:#FFFFFF;font-variant:normal;font-family:warnock-pro,"Sabon LT Std",Georgia,"Times New Roman",Times,serif;font-weight:normal;line-height:1.1}.wf-active header hgroup h2{font-size:1.1em}header hgroup h2.homenav{display:inline;padding-right:20px}header p{color:#FFFFFF;font-family:league-gothic,"Gill Sans","Helvetica","Arial",sans-serif;font-weight:400;margin-top:0}header nav{font-family:league-gothic,"Gill Sans","Helvetica","Arial",sans-serif;font-weight:400}.wf-active header nav{font-size:120%}header nav ul{margin-top:0;padding-left:0;margin-left:0;padding-top:10px;list-style:none;height:15px}header nav ul li{display:block;float:left;padding-right:20px}header a:link{color:#FF0000;text-decoration:none}header a:visited{color:#FF0000;text-decoration:none}header a:hover{color:#CCCCCC;text-decoration:underline}header a:active{color:#CCCCCC;text-decoration:underline}header img{display:none;position:absolute;top:5px;right:5px}body.home header img{position:relative}#archives ul{list-style:none;padding-left:0}#categories a img{border:none}footer{font-family:league-gothic,"Gill Sans","Helvetica","Arial",sans-serif;font-weight:400}footer nav ul{list-style:none;padding:10px 0 20px 0;margin:0;float:left}footer nav li{float:left;padding-right:20px}footer p{color:#FFFFFF;clear:both}.wf-active footer{font-size:120%}blockquote{font-style:italic;background-color:#ccc;padding:5px;border:1px solid #FF0000;margin:0 15px 10px 15px;-moz-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;-moz-background-clip:padding;-webkit-background-clip:padding-box;background-clip:padding-box}#content{background-color:#FFFFFF}#content h2 a:link{color:#000000}#content h2 a:visited{color:#000000}#content h2 a:hover{color:#FF0000;text-decoration:underline}#content h2 a:active{color:#000000;text-decoration:underline}#content p{margin:0;padding-bottom:15px}#disclaimer{padding-top:20px;font-family:warnock-pro,"Sabon LT Std",Georgia,"Times New Roman",Times,serif;font-style:italic}div#content>div{padding-bottom:20px}header,footer,#content,#archives{padding:0 10px 3px 10px}article{padding:0 0px}article ul{margin:0 0 10px 0}article header{background-color:#FFFFFF;padding:0;color:#000000}article footer{background-color:#FFFFFF;padding:0;color:#000000}article footer p{color:#000000}article header h1{font-size:2.5em;padding:0}article aside{font-style:italic;border:1px dotted #ff0000;background-color:#F0f0f0;padding:5px;-moz-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;-moz-background-clip:padding;-webkit-background-clip:padding-box;background-clip:padding-box;margin:0 0 10px 0}article footer{color:#000000;font-family:warnock-pro,"Sabon LT Std",Georgia,"Times New Roman",Times,serif}article .related ul{padding:0 0 15px 0;margin:0 0 0 20px}article img,article iframe,article object,article video{max-width:100% !important}#comment_list{overflow:hidden;padding-left:0}#comment_list .comment_num{font-size:78px;float:left;margin:0 5px 5px 0px;padding-top:5px;line-height:.7;text-decoration:none}#comment_list .comment_num a{color:#000000}#comment_list .comment_num a:link{color:#000000}#comment_list .comment_num a:visited{color:#000000}#comment_list .comment_num a:hover{color:#000000}#comment_list .comment_num a:active{color:#000000}#comment_list div.author .comment_num,#comment_list li.author .comment_num a{color:#CCC}li.comment{-moz-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;-moz-background-clip:padding;-webkit-background-clip:padding-box;background-clip:padding-box;margin-bottom:10px;padding:5px 5px 5px 5px;float:left;border:1px solid #CCC;width:95%;background-color:#F0f0f0;list-style:none}li.comment p{padding:0;margin:0}li.author{border:1px solid #076FA2;background-color:#FF0000}li.author a{color:#FFFFFF}.item{padding-bottom:10px}.pod{padding:10px 0 20px 0}.externalref{text-align:right;font-style:italic}.about img{border:1px solid #FF0000}#action ul{padding-left:25px}#action a img{border:none}@media screen and (min-width: 768px) and (min-device-width: 768px){header>*,footer>*,#archives{max-width:900px;margin:0 auto}h1{font-size:2.5em;margin:0}.wf-active h1{font-size:3.5em}#blogpost h1{font-size:2.5em}html.wf-active body.blog h1,html.wf-active body#blogpost h1,html.wf-active body#book h1,html.wf-active body#about h1,html.wf-active body#job header h1{font-size:4.5em}h2{margin-bottom:10px;font-size:1.2em}.wf-active h2{font-size:2em}body#blogpost h2{font-size:1.2em}html.wf-active body.blog h2,html.wf-active body#blogpost header h2,html.wf-active body#book header h2,html.wf-active body#about header h2,html.wf-active body#job header h2{padding-top:25px;padding-left:10px;font-size:1em;line-height:1.1}h3{font-size:1.1em}.wf-active h3{font-size:1.5em}header{padding-bottom:20px;clear:both}header hgroup img{float:right}header hgroup h1{display:table-cell;padding-top:5px;width:45%}header hgroup h2{display:table-cell;color:#FFFFFF;font-variant:normal;padding-top:15px;vertical-align:top;width:50%;font-size:2em}.wf-active header hgroup h2{font-size:1em}header nav{display:table-cell;padding-top:5px;vertical-align:top;text-align:right;width:5%}.wf-active header nav{font-size:1.3em}header nav ul{height:auto}.wf-active header nav ul{margin:0;padding:10px 0 0 0}header nav ul li{display:block;float:none}header img{display:inline;position:relative}header span{display:none}footer{padding:20px 0 20px 0}#content{max-width:900px;margin:0 auto}#content p{font-size:20px;word-wrap:break-word;max-width:900px}#content h2{clear:both}body.home{padding-bottom:0;background-color:#000000;background-image:url("bodybg.png");background-repeat:repeat-y}.home header{width:350px;height:100%;float:left}.home header p{padding-bottom:5px}.home header hgroup h1{display:block;width:auto}.home header hgroup h2{display:block;width:auto;float:none;margin-left:0}.home header hgroup h2.homenav{display:inline}.home header hgroup img{float:left}.home header nav{display:block}.home footer{display:table-row;clear:both;width:350px;float:left}.home footer p{margin-left:5px;padding-bottom:5px}.home footer nav ul{margin-left:5px}.home #content{display:table;padding-top:20px;height:100%;margin-bottom:-1500px}#primarycontent,#secondarycontent{display:table-row}.pod{display:table-cell;padding-right:40px;padding-bottom:40px;width:50%}.externalref{font-size:.8em}#comment_form textarea{width:600px}#comment_form input.text_input{width:370px}.pod{padding-bottom:0}.pod article{padding-bottom:0}#archives section{display:table-cell;width:33%}#about img{margin-left:5px;float:right}#info,#action{display:table-cell}#action{padding-left:20px}#info{padding-right:20px;border-right:1px solid #FF0000}#book #info img{margin-left:5px;float:right}#book #info{width:70%}#job #adobelogo{float:right;margin-left:5px}article header{clear:both;float:none;height:auto}#searchpage footer{height:100%}#job blockquote{margin-right:340px}}
